--- a/index.html
+++ b/index.html
@@ -8,7 +8,177 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    PORTFOLIO content
+<!--header start -->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            Header
+        </div>    
+    </div>
+</div>
+<!--header end -->   
+
+<!-- Hero start-->
+<div class="container bg-primary">
+    <div class="row">
+        <div class="col-12">
+            Hero
+        </div>
+    </div>
+</div>
+<!-- Hero end-->    
+
+<!--clients start-->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            Clients
+         </div>
+    </div>
+</div>
+<!-- Clients end-->   
+
+<!--About me start-->
+<div id="about_me" class="container">
+    <div class="row">
+        <div class="col-5 m-r-2 col-md-4 col-md-1 col-sm-12 m-r.sm-0">
+            <img src="./img/about_me.png" alt="">
+        </div>
+        <div class="col-5 col-md-7 col-sm-12">
+            <h2>About myself</h2>
+            <p>I’m a Front End Developer. I have a Passion for Creating Clean, Beautiful, Interactive, Minimalistic, Responsive and User Friendly UI, Developed by Modular, Scalable and Functional Code. When, while the lovely valley teems with vapour around me.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <div class="btn">More info</div>
+            <div class="btn">Resume</div>
+        </div>
+    </div>
+</div>
+<!--about me end-->
+
+<!--achievements start-->
+<div class="container bg-primary-light">
+    <div class="row">
+        <div class="col-12">
+            achievements
+        </div> 
+    </div>   
+</div>
+<!--achievements end-->  
+
+<!--skills start-->
+<div class="container">
+    <div class="row">
+        <div class="col-5 col-sm-12">
+            <h2 class="no-decoration">I got the skills</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi mollitia rem quisquam atque pariatur, a ut, amet illum quibusdam facere vitae delectus reiciendis fugit tempora esse sint deserunt dolorum.</p>
+        </div>
+        <div id="skills_progress_bars" class="col-7 col-sm-12">
+            progress bar x 4
+        </div>
+    </div>
+</div>
+<!--skills end-->
+
+<!--gallery start-->
+<div class="container bg-primary-light">
+    <div class="row">
+        <div class="col-12">
+            <h2>Latest work</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 col-sm-12">
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="col-6 col-sm-12">
+            GALLERY FILTER
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            GALLERY
+        </div>
+    </div>
+</div>
+<!--gallery end-->
+
+<!--job history start-->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h2>Job history</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 col-sm-12">
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            JOB HISTORY x 4
+        </div>
+    </div>
+</div>
+<!--job history end-->
+
+<!--services start-->
+<div class="container  bg-primary-light">
+    <div class="row">
+        <div class="col-12">
+            <h2>Service offers</h2>
+        </div> 
+    </div>
+    <div class="row">
+        <div class="col-6 col-sm-12">
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 col-sm-12">
+            <span>+22 12345 678 9012</span>
+        </div>
+        <div class="col-4 col-sm-12">
+            <spam>information@example.com</spam>
+        </div>
+        <div class="col-4 col-sm-12">
+            <span>KarimEzZat.me</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="btn">Hire me</div>
+        </div>
+    </div>
+</div>
+<!--contact me end-->
+
+<!--footer start-->
+<footer class="container text-center">
+    <div class="row">
+        <div class="col-12">
+            LOGO
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            Follow me
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <a href="#" target="_blank" class="fa fa-facebook"></a>
+            <a href="#" target="_blank" class="fa fa-twitter"></a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            Copyright ©All rights reserved | KARMEN is made with  by KarimEzZat
+        </div>
+    </div>
+</footer>
+<!--footer end-->
+           
     <script src="./js/data.js"></script>
     <script src="./js/functions.js"></script>
     <script src="./js/actions.js"></script>
